<resources>
    <string name="app_name">Stock</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_url">Server URL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="barcode">Barcode</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="manufacture">Manufacture</string>
    <string name="warehouse">Warehouse</string>
    <string name="shelf_location">Shelf Location</string>
    <string name="quantity">Quantity</string>
    <string name="product_photo">Product photo</string>
    <string name="add">Add</string>
    <string name="select">Select</string>
    <string name="camera_preview">Camera preview</string>
    <string name="stock">Stock</string>
</resources>