<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">


    <ScrollView
        android:id="@+id/add_product_scrollview"
        android:layout_width="match_parent"
        android:layout_marginBottom="82dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/scan_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/gold"
                android:textColor="@color/black"
                android:text="@string/scan_barcode" />

            <EditText
                android:id="@+id/editTextBarcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:hint="@string/barcode"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:hint="@string/product_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:gravity="start|top"
                android:hint="@string/product_description"
                android:textColorHint="@color/dark_gray"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editTextManufacture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:hint="@string/manufacture"
                android:inputType="text" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/warehouse"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            <Spinner

                android:layout_margin="10dp"
                android:id="@+id/spinnerWarehouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#DADADA"
                android:padding="10dp"
                android:spinnerMode="dropdown"

                />

            </TableRow>
            </TableLayout>



            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:hint="@string/shelf_location"
                android:inputType="text" />




            <EditText
                android:id="@+id/editTextNumberSigned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:layout_margin="10dp"
                android:hint="@string/quantity"
                android:inputType="numberSigned" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_margin="10dp"
                android:background="@color/extra_dark_primary"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/product_photo"
                tools:src="@tools:sample/avatars" />









            <Button
                android:id="@+id/add_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/gold"
                android:textColor="@color/black"
                android:text="@string/add" />




        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>